[package]
name = "spurs"
version = "0.1.0"
authors = ["mark-i-m"]
edition = "2018"
license = "Apache-2.0"
keywords = ["SSH", "remote", "experimentation", "spur-py"]
readme = "README.md"
repository = "https://github.com/mark-i-m/spurs"
homepage = "https://github.com/mark-i-m/spurs"
description = """
Utilities for setting up and running experiments remotely
"""
categories = ["science"]

[dependencies]
ssh2 = "0.3.3"
dirs = "1.0.4"
failure = "0.1.2"
failure_derive = "0.1.2"
console = "0.6.2"
