[package]
name = "spurs-util"
version = "0.3.0" # remember to update html_root_url
authors = ["mark-i-m"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["SSH", "remote", "experimentation", "spur-py"]
readme = "../README.md"
repository = "https://github.com/mark-i-m/spurs"
documentation = "https://docs.rs/spurs-util/"
description = """
Utilities for setting up and running experiments remotely.
"""
categories = ["science"]

[dependencies]
spurs = "0.9.0"
log = "0.4.6"
env_logger = "0.6.0"

[dev-dependencies]
spurs = { version = "0.9.0", features = ["test"] }
