[package]
name = "spurs"
version = "0.5.0" # remember to update html_root_url
authors = ["mark-i-m"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["SSH", "remote", "experimentation", "spur-py"]
readme = "../README.md"
repository = "https://github.com/mark-i-m/spurs"
documentation = "https://docs.rs/spurs/"
description = """
Utilities for setting up and running experiments remotely
"""
categories = ["science"]

[features]
default = []
test = []

[dependencies]
ssh2 = "0.3.3"
dirs = "1.0.4"
console = "0.7.2"
log = "0.4.6"
env_logger = "0.6.0"
